fixed size and positioning of links on mobile

--- a/src/components/Layout/Navigation.module.css
+++ b/src/components/Layout/Navigation.module.css
@@ -80,6 +80,7 @@
   list-style-type: none;
   display: flex;
   gap: 1rem;
+  padding-left: 0;
 }
 
 .links li a {
@@ -118,5 +119,15 @@
   }
   100% {
     height: 100vh;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .links {
+    gap: 1.5rem;
+  }
+
+  .links li a {
+    font-size: 1.7rem;
   }
 }
